#############################################################################
# KidTsunami - Professional. Live. Video.
#
# File:     CMakeLists.txt
# Author:   Alexander Eichhorn <echa@kidtsunami.com>
# Contents: OpenFrameWorks Examples
#
#
# Copyright 2012 KidTsunami. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
#############################################################################


add_subdirectory(ofxPCLExtractIndices)
add_subdirectory(ofxPCLGreedyProjection)
add_subdirectory(ofxPCLOpenNI)
add_subdirectory(ofxPCLResampling)
add_subdirectory(ofxPCLStatisticalRemoval)
add_subdirectory(ofxPCLVoxelGrid)
add_subdirectory(3DModelLoaderExample)
add_subdirectory(QtKitVideoGrabberExample)
add_subdirectory(QtKitVideoPlayerExample)
add_subdirectory(QtKitVideoRecorderExample)
add_subdirectory(advanced3dExample)
add_subdirectory(advancedEventsExample)
add_subdirectory(advancedGraphicsExample)
add_subdirectory(allAddonsExample)
add_subdirectory(assimpExample)
add_subdirectory(audioInputExample)
add_subdirectory(audioOutputExample)
add_subdirectory(blendingExample)
add_subdirectory(devAdvancedImageLoading)
add_subdirectory(devBillboardExample)
add_subdirectory(devBillboardTester)
add_subdirectory(devDictionaryTester)
add_subdirectory(devFboExample)
add_subdirectory(devLoadFromWebExample)
add_subdirectory(devMemo3DCameraExample)
#add_subdirectory(devMeshGeneration)
#add_subdirectory(devMeshTester)
add_subdirectory(devOpenALExample)
#add_subdirectory(devPolylineTesting)
#add_subdirectory(devShapeExample)
add_subdirectory(devSimpleLightExample)
#add_subdirectory(devSynthExample)
add_subdirectory(devSynthSequencingExample)
add_subdirectory(devVboExample)
add_subdirectory(devVertexAttExample)
add_subdirectory(dirListExample)
add_subdirectory(dragDropExample)
add_subdirectory(easyCamExample)
add_subdirectory(emptyExample)
add_subdirectory(eventsExample)
add_subdirectory(firmataExample)
add_subdirectory(floatingPointImageExample)
add_subdirectory(fontsExample)
add_subdirectory(fontsShapesExample)
add_subdirectory(geometryShaderExample)
add_subdirectory(graphicsExample)
add_subdirectory(guiExample)
add_subdirectory(imageCompressionExample)
add_subdirectory(imageLoaderExample)
add_subdirectory(imageSaverExample)
add_subdirectory(movieGrabberExample)
add_subdirectory(moviePlayerExample)
add_subdirectory(networkTcpClientExample)
add_subdirectory(networkTcpServerExample)
add_subdirectory(networkUdpReceiverExample)
add_subdirectory(networkUdpSenderExample)
add_subdirectory(ofBoxExample)
add_subdirectory(ofxUIAllWidgets)
add_subdirectory(ofxUIButtons)
add_subdirectory(ofxUICustomFont)
add_subdirectory(ofxUICustomPlacement)
add_subdirectory(ofxUICustomWidgets)
add_subdirectory(ofxUIMoreWidgets)
add_subdirectory(ofxUISaveLoadSettings)
add_subdirectory(ofxUISimpleExample)
add_subdirectory(ofxUISliders)
add_subdirectory(ofxUITutorial)
add_subdirectory(opencvExample)
add_subdirectory(opencvHaarFinderExample)
add_subdirectory(oscReceiveExample)
add_subdirectory(oscSenderExample)
add_subdirectory(pdfExample)
add_subdirectory(polygonExample)
add_subdirectory(serialExample)
add_subdirectory(shaderExample)
add_subdirectory(soundPlayerExample)
add_subdirectory(soundPlayerFFTExample)
add_subdirectory(textureExample)
add_subdirectory(textureScreengrabExample)
add_subdirectory(threadedImageLoaderExample)
add_subdirectory(threadExample)
add_subdirectory(vectorGraphicsExample)
add_subdirectory(vectorMathExample)
add_subdirectory(videoGrabberExample)
add_subdirectory(windowExample)
add_subdirectory(xmlSettingsExample)
